Use newer map builder